phpmyadmin追加　CSVファイルインポート　文字化け解消

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,17 @@ services:
       - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
     ports:
       - 3306:3306
+# phpMyadominのコンテナ作成
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    depends_on:
+      - db
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOSTS=db
+      - PMA_USER=smile_user
+      - PMA_PASSWORD=ma123456
+    ports:
+      - "8080:80"
+    volumes:
+      - ./docker/phpmyadmin/sessions:/sessions
